# zman

./: .replit  activity-book-generator.txt  app.py  course-generator.txt  data.db  models.py  newsletter-generator.txt  pyproject.toml  replit.md  replit.nix  requirements.txt  wsgi.py
apps/: pwa.py  reports.py
apps/actgen/: __init__.py
apps/admin/: __init__.py
apps/coursegen/: __init__.py
apps/emailnewsgen/: __init__.py
attached_assets/: Pasted-Error-code-400-error-message-Failed-to-generate-JSON-Pl_1784568108580.txt
static/css/: mobile.css
templates/: base.html  index.html
templates/actgen/: index.html  view.html
templates/admin/: index.html  login.html
templates/coursegen/: index.html  view.html
templates/emailnewsgen/: index.html  preview.html
