[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "DevTools Suite"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "groq>=0.9.0",
    "playwright>=1.44.0",
    "werkzeug>=3.1.3",
    "pdfkit>=1.0.0",
    "qrcode>=8.2",
    "pillow>=12.3.0",
    "wkhtmltopdf>=0.2",
    "imgkit>=1.2.3",
    "python-docx>=1.2.0",
]
